<resources>

    <string name="app_name">Калькулятор</string>
    <string name="menu_settings">Настройки</string>
    <string name="title_activity_main">Калькулятор</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="clear_all">CE</string>
    <string name="clear">C</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="star">*</string>
    <string name="slash">/</string>
    <string name="exit">Выход</string>
    <string name="save">Сохранить</string>

</resources>