<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    
    <TextView
        android:id="@+id/tvArgs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@color/Args"
        android:gravity="right|bottom"
        android:maxLines="100"
        android:paddingRight="10dip"
        android:scrollbars="vertical"
        android:textSize="9pt" />
	
    <TextView
        android:id="@+id/tvEditArgs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/EditArgs"
        android:gravity="right"
        android:text="@string/zero"
        android:textSize="10pt" />
	
    <TableLayout
        android:id="@+id/ButtonsLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/Pad" >

        <TableRow
            android:id="@+id/btnsRow1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" >
	    
            <Button
                android:id="@+id/btnClr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear" />
            <Button
                android:id="@+id/btnClrE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear_all" />
            <Button
                android:id="@+id/btnPls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus" />
        </TableRow>

        <TableRow
            android:id="@+id/btnsRow2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" >
            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/one" />
		
            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/two" />
            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/three" />
		
            <Button
                android:id="@+id/btnMns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus" />
        </TableRow>

        <TableRow
            android:id="@+id/btnsRow3"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" >

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/four" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/five" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/six" />

            <Button
                android:id="@+id/btnMlt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/star" />
        </TableRow>

        <TableRow
            android:id="@+id/btnsRow4"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" >

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/seven" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eight" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nine" />

            <Button
                android:id="@+id/btnDvd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slash" />
        </TableRow>

        <TableRow
            android:id="@+id/btnsRow5"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" >
	    
	    <Button
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero" />
            <Button
                android:id="@+id/btnDot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dot" />

            <Button
                android:id="@+id/btnEqvl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/equal" />
        </TableRow>
    </TableLayout>
</LinearLayout>